--- a/duel.html
+++ b/duel.html
@@ -5,26 +5,48 @@
     <title>The Duel</title>
     <style>
       div{
+        display: none;
         white-space: pre;
         font-family: monospace;
-      }
+        }
+      .visible{
+        display:block;
+        }
     </style>
   </head>
   <body>
-    <div id="duel1">
+    <div id="duel1" class="visible">
       ~O  O~
-      <|/\|>
+      &lt;|/\|&gt;
        |\ |\
     </div>
     <div id="duel2">
       ~O  O~
-      <|--|>
+      &lt;|--|&gt;
       / \/ \
     </div>
     <div id="duel3">
       ~O  O~
-      <|\/|>
+      &lt;|\/|&gt;
        |\ |\
     </div>
+    <script>
+      var frame = 1;
+      setInterval(function(){
+        console.log(frame);
+        var el = document.getElementById('duel'+frame);
+        el.className = '';
+
+        frame++;
+        if(frame == 4)
+        {
+          frame = 1;
+        }
+
+        el = document.getElementById('duel'+frame);
+        el.className = 'visible';
+      }, 1000);
+
+    </script>
   </body>
 </html>
